float로 인해 요소의 높이가 없어졌다. 즉 없는 요소가 되어버려서 css 전체가 붕괴될 수 있다.

--- a/CSS-BASIC/float/style.css
+++ b/CSS-BASIC/float/style.css
@@ -3,12 +3,13 @@
 }
 
 .parent{
-    width: 200px;
+    width: 600px;
     margin: 0 auto;
     background-color: aliceblue;
 }
 
 .child{
+    width: 200px;
     height: 200px;
     line-height: 200px;
     text-align: center;
@@ -18,13 +19,16 @@
 
 .red{
     float: left;
+    opacity: 1;
     background-color: red;
 }
 
 .yellow{
+    float: left;
     background-color: yellowgreen;
 }
 
 .blue{
+    float: left;
     background-color: blue;
 }
