position:fixed 활용법  - position:fixed를 적용하면 그 요소는 viewport 기준으로 위치하게 된다.

--- a/CSS-BASIC/position/style.css
+++ b/CSS-BASIC/position/style.css
@@ -39,3 +39,26 @@
 .blue{
     background-color: blue;
 }
+
+.grandparent2{
+    position: relative;
+    width: 800px;
+    height: 600px;
+    margin: 0 auto;
+    background-color: rgb(36, 73, 49);
+}
+
+.green{
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: green;
+}
+
+.purple{
+    background-color: purple;
+}
+
+.orange{
+    background-color: orange;
+}
